--- a/src/index.html
+++ b/src/index.html
@@ -10,11 +10,12 @@
         <!-- Leaflet css -->
         <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css" integrity="sha256-p4NxAoJBhIIN+hmNHrzRCf9tD/miZyoHS5obTRR9BMY=" crossorigin=""/>
         <!-- Leaflet js -->
-        <script async src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js" integrity="sha256-20nQCchB9co0qIjJZRGuk2/Z9VM+kNiyxNV1lvTlZBo=" crossorigin=""></script>
+        <script defer src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js" integrity="sha256-20nQCchB9co0qIjJZRGuk2/Z9VM+kNiyxNV1lvTlZBo=" crossorigin=""></script>
+        <script type='text/javascript' src="ts/main.js" defer></script>
     </head>
     <body>
-        Start the map here
-        <script src="js/main.js" async defer></script>
+        <div id="property-map"> 
+        </div>
     </body>
 </html>
 
