--- a/src/index.html
+++ b/src/index.html
@@ -11,7 +11,7 @@
         <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css" integrity="sha256-p4NxAoJBhIIN+hmNHrzRCf9tD/miZyoHS5obTRR9BMY=" crossorigin=""/>
         <!-- Leaflet js -->
         <script defer src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js" integrity="sha256-20nQCchB9co0qIjJZRGuk2/Z9VM+kNiyxNV1lvTlZBo=" crossorigin=""></script>
-        <script type='text/javascript' src="ts/main.js" defer></script>
+        <script type='module' src="ts/main.js" defer></script>
     </head>
     <body>
         <div id="property-map"> 
